Fixed a small bug

--- a/NA_project_NN.ipynb
+++ b/NA_project_NN.ipynb
@@ -1852,7 +1852,8 @@
         "        # For each movie\n",
         "        for movie_i in range(X_hat.shape[1]):\n",
         "            # If it's a movie to recommend and the user hasn't rated it\n",
-        "            if X_hat[user_position , movie_i] >= max_rating and true_ratings_matrix[user_position , movie_i] == 0:\n",
+        "            if X_hat[user_position , movie_i] >= max_rating and X_hat[user_position , movie_i] < (max_rating + 0.5) \n",
+        "                      and true_ratings_matrix[user_position , movie_i] == 0:\n",
         "                # Add the movie id in the list\n",
         "                movie_to_recommend.append(movieIds_available[movie_i])\n",
         "                # Add the current max_rating in the list\n",
